<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.deltabit.bakingapp.StepListActivity">

            <ImageView
                android:id="@+id/imageviewRecipe"
                android:contentDescription="@string/recipe_thumbnail_contentDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorAccent"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/buttonIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



</LinearLayout>
