<resources>
    <string name="app_name">BakingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="SELECTED_RECIPE_ID_KEY">selected_recipe_key</string>
    <string name="SHARED_PREFERENCES_KEY">com.deltabit.bakingapp</string>
    <string name="RECIPE_TITLE_KEY">recipe_title</string>
    <string name="SELECTED_STEP_ID_KEY">selected_step_id</string>
    <string name="SELECTED_STEP_TITLE_KEY">selected_step_title</string>
    <string name="INGREDIENTS_KEY">.ingredients_list_key</string>
    <string name="previous_label">Previous</string>
    <string name="next_label">Next</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="quantity_label">Quantity</string>
    <string name="ingredient_label">Ingredient</string>
    <string name="share_lable">SHARE</string>
    <string name="view_recipe_label">VIEW RECIPE</string>
    <string name="recipe_thumbnail_contentDescription">recipe thumbnail</string>
</resources>
