<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deltabit.bakingapp.StepDetailActivity">


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/step_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>